--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,11 +3,11 @@ Type: Package
 Title: Spatial Network Autocorrelation for Flow data
 Version: 0.1.0
 Authors@R: c(
-    person("Youngbin", "Lee", email = "youngbin@snu.ac.kr", role = c("aut", "cre")),
-    person("Huijeong", "Ha", email = "haileyeehayee@gmail.com", role = c("aut")),
-    person("Sohyun", "Park", email = "spark230@gmu.edu", role = c("aut")),
-    person("Kyusik", "Kim", email = "kkim17@fsu.edu", role = c("aut")),
-    person("Jinhyung", "Lee", email = "jinhyung.lee@uwo.ca", role = c("aut")))
+    person(given="Youngbin", family="Lee", email = "youngbin@snu.ac.kr", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-3466-6495")),
+    person(given="Hui Jeong", family="Ha", email="hailyeeha@gmail.com", role="aut", comment = c(ORCID = "0000-0002-5229-4528")),
+    person(given="Sohyun", family="Park", email="spark230@gmu.edu", role="aut", comment = c(ORCID = "0000-0002-1231-5662")),
+    person(given="Kyusik", family="Kim", email="wpkyusik@gmail.com", role="aut", comment = c(ORCID = "0000-0003-3753-3196")),
+    person(given="Jinhyung", family="Lee", email="jinhyung.lee@uwo.ca", role="aut", comment = c(ORCID = "0000-0003-1859-3441")))
 Description: Calculating spatial network autocorrelation for flow data with
     G statistics. You provide OD data and the associated polygon to get results 
     with several parameters defined by spdep package that control how the 
