--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,12 +20,13 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
 Imports: 
-    magrittr,
     dplyr,
+    magrittr,
+    rmarkdown,
     sf,
     spdep,
     tidyr,
-    rmarkdown
+    tmap
 Suggests: 
     knitr
 VignetteBuilder: knitr
