revise Title to title case and add donttest code in the example

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spnaf
 Type: Package
-Title: Spatial Network Autocorrelation for Flow data
+Title: Spatial Network Autocorrelation for Flow Data
 Version: 0.1.0
 Authors@R: c(
     person(given="Youngbin", family="Lee", email = "youngbin@snu.ac.kr", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-3466-6495")),
